--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content:center;
-
+  min-height: 100%;
+  margin:0;
 }
 .container {
   display: flex;
@@ -178,6 +179,10 @@ body {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+.cartNoProducts {
+  color: #838383
+}
+
 .cartTitle {
   font-size: 20px;
   font-weight: 600;
@@ -323,6 +328,7 @@ body {
   margin: auto;
   box-sizing: border-box;
   padding: 29px;
+  min-height:150px
 }
 .footerContent {
   margin: 0;
